# Nix

./: LICENSE  README.md
nix_backplate/: nix_backplate.kicad_pcb
nix_pcb/: DS3234SN#.lib  controller.sch  nix_pcb.kicad_pcb  nix_pcb.pro  nix_pcb.sch  symbols.lib  tubes.sch
nix_pcb/footprints/: SOIC127P1032X265-20N.kicad_mod
sw/ble-spi-bridge-nrf52-pca10040-s132/: Makefile
sw/ble-spi-bridge-nrf52-pca10040-s132/config/: sdk_config.h
sw/ble-spi-bridge-nrf52-pca10040-s132/sdk/components/libraries/util/: app_error.h
sw/ble-spi-bridge-nrf52-pca10040-s132/src/: main.c  soft_spi.c  soft_spi.h
sw/nix/: Cargo.toml  memory.x  openocd.cfg  openocd.gdb
sw/nix/src/: ds3234.rs  main.rs  nixiedigits.rs  temperature.rs  time.rs
sw/nix_rtic/: Cargo.toml
sw/nix_rtic/.cargo/: config
sw/nix_rtic/src/: bcd.rs  board.rs  buttons.rs  ds3234.rs  ext.rs  main.rs  mode.rs  nixieclock.rs  nixiedigits.rs  temperature.rs  time.rs
