[package]
authors = ["Jonas <osannolik@godtycklig.se>"]
edition = "2018"
readme = "README.md"
name = "nix"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
#stm32l0xx-hal = { version = "0.10.0", features = ["mcu-STM32L011F4Px", "rt"] }
#embedded-hal = "0.2.3"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
num-traits = { version = "0.2.15", default-features = false }

[dependencies.stm32l0xx-hal]
version = "0.10.0"
features = ["mcu-STM32L011F4Px", "rt"]
path = "../../../stm32l0xx-hal"
# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
#[dependencies.stm32l0]
#features = ["stm32l0x1", "rt"]
#version = "0.15.1"

[dependencies.bitvec]
version = "1.0.1"
default-features = false


# this lets you use `cargo fix`!
[[bin]]
name = "nix"
test = false
bench = false

[profile.dev]
opt-level = "z"
debug = true # symbols are nice and they don't increase the size on Flash

[profile.release]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
